manifests/collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
  namespace: a1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
        - name: collector
          image: gcr.io/organic-premise-477811-c4/collector:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /readinessProbe
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /livenessProbe
              port: 80
            initialDelaySeconds: 6
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
