manifests/alert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert
  namespace: a1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert
  template:
    metadata:
      labels:
        app: alert
    spec:
      containers:
        - name: alert
          image: ccuni/alert-service-2025w
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: alert
  namespace: a1
spec:
  selector:
    app: alert
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
