manifests/camera-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camera
  namespace: a1
spec:
  selector:
    app: camera
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
