manifests/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector
  namespace: a1
spec:
  selector:
    app: collector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
